--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -8,11 +8,12 @@
     <link href="~/lib/fontawesome/css/all.min.css" rel="stylesheet" />
     <link href="~/lib/pNotify/pnotify.custom.min.css" rel="stylesheet" />
     <link href="~/css/site.css" rel="stylesheet" />
-    <link rel="stylesheet" href="~/css/site.css" />
 
     <script src="~/lib/jquery/jquery-3.4.1.min.js"></script>
     <script src="~/lib/knockout/knockout-3.4.2.js"></script>
+    <script src="~/lib/knockout/knockout.customs.js"></script>
     <script src="~/lib/pNotify/pnotify.custom.min.js"></script>
+    <script src="~/lib/bootstrap/bootstrap.min.js"></script>
     <script src="~/js/notification.js"></script>
 
 </head>
