--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -234,15 +234,16 @@ body {
     color: #fff;
 }
 
-[visible="true"]{
-    display:inherit;
-}
-[visible="false"]{
-    display:none;
+[visible="true"] {
+    display: inherit;
 }
 
-[loading="true"]{
-    display:none;
+[visible="false"] {
+    display: none;
+}
+
+[loading="true"] {
+    display: none;
 }
 
 [loading="false"] {
@@ -253,6 +254,7 @@ body {
     height: 120px;
     animation: spin 2s linear infinite;
 }
+
 @keyframes spin {
     0% {
         transform: rotate(0deg);
@@ -261,4 +263,48 @@ body {
     100% {
         transform: rotate(360deg);
     }
+}
+
+.r_row {
+    background: #fff;
+    border-radius: 2px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    padding: 5px;
+    border-right: 5px solid #EF9A9A;
+}
+
+.add_row_btn {
+    text-align: center;
+    margin-top: 10px;
+    color: #fff;
+    background-color: #4CAF50;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    border-radius: 2px;
+    cursor: pointer;
+    font-size: 22px;
+}
+
+.r_modal{
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+.r_modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+}
+
+.r_modal[visible="true"] {
+    display:block;
 }
