--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -15,11 +15,11 @@
     <script src="~/lib/pNotify/pnotify.custom.min.js"></script>
     <script src="~/lib/bootstrap/bootstrap.min.js"></script>
     <script src="~/js/notification.js"></script>
-
+    <script src="~/lib/date/jlgrg.js"></script>
 </head>
 <body>
     <div id="wrapper">
-        
+
         <div id="sidebar-wrapper">
             <img class="sidebar-logo" src="~/images/logo.svg" />
             <ul class="sidebar-nav">
