--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link href="~/lib/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="~/lib/fontawesome/css/all.min.css" rel="stylesheet" />
     <link href="~/lib/pNotify/pnotify.custom.min.css" rel="stylesheet" />
+    <link href="~/lib/bootstrap/mdb.min.css" rel="stylesheet" />
     <link href="~/css/site.css" rel="stylesheet" />
 
     <script src="~/lib/jquery/jquery-3.4.1.min.js"></script>
@@ -15,7 +16,7 @@
     <script src="~/lib/pNotify/pnotify.custom.min.js"></script>
     <script src="~/lib/bootstrap/bootstrap.min.js"></script>
     <script src="~/js/notification.js"></script>
-    <script src="~/lib/date/jlgrg.js"></script>
+    <script src="~/lib/bootstrap/mdb.min.js"></script>
 </head>
 <body>
     <div id="wrapper">
@@ -42,8 +43,8 @@
             </div>
         </div>
     </div>
-    <script src="~/lib/apprun/apprun-html.js"></script>
-    <script src="~/js/site.js"></script>
+    @*<script src="~/lib/apprun/apprun-html.js"></script>*@
+    @*<script src="~/js/site.js"></script>*@
 
 
 </body>
